# Calculator

./: .clang-format  .clangd  CMakeLists.txt  LICENSE  README.md
src/App/: main.cpp
src/Core/Header Files/: Calculator.h  Operations.h
src/Core/Source Files/: Calculator.cpp  Operations.cpp
src/Core/Tests/: OperationsTest.cpp
